--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<a href="#" class="header__nav-link">УСЛУГИ</a>
 				<a href="#" class="header__nav-link">БЛОГ</a>
 				<a href="#" class="header__nav-link">О НАС</a>
-				<a href="#" class="header__nav-link">КОНТАКТЫ</a>
+				<a href="pages/contacts.html" class="header__nav-link">КОНТАКТЫ</a>
 				<a href="pages/hiring-employees.html" class="header__nav-link">СОТРУДНИКАМ</a>
 			</nav>
 			<form action="#" method="get" class="header__search-form">
