--- a/pages/hiring-employees.html
+++ b/pages/hiring-employees.html
@@ -34,8 +34,8 @@
                     <a href="#" class="header__nav-link">УСЛУГИ</a>
                     <a href="#" class="header__nav-link">БЛОГ</a>
                     <a href="#" class="header__nav-link">О НАС</a>
-                    <a href="#" class="header__nav-link">КОНТАКТЫ</a>
-                    <a href="#" class="header__nav-link">СОТРУДНИКАМ</a>
+                    <a href="contacts.html" class="header__nav-link">КОНТАКТЫ</a>
+                    <a href="hiring-employees.html" class="header__nav-link">СОТРУДНИКАМ</a>
                 </nav>
                 <form action="#" method="get" class="header__search-form">
                     <button type="submit" class="header__search-submit-button">
