Finish contacts page

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -1,79 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../fonts.css" />
-    <link rel="stylesheet" href="../style.css" />
-    <link rel="stylesheet" href="../styles/contacts.css">
+	<link rel="stylesheet" href="../fonts.css" />
+	<link rel="stylesheet" href="../style.css" />
+	<link rel="stylesheet" href="../styles/contacts.css">
 
-    <link rel="shortcut icon" href="../media/min-logo.svg" />
+	<link rel="shortcut icon" href="../media/min-logo.svg" />
 
-    <title>LifeOops - контакты</title>
+	<title>LifeOops - контакты</title>
 </head>
+
 <body>
-    <header>
-        <div class="header__contacts-container-background">
-            <div class="header__contacts-container g-page-container">
-                <div class="header__working-hours">
-                    <img src="../media/watch-icon.svg" alt="Иконка часов" class="header__watch-icon">
-                    <p class="header__working-hours-text">Мы работаем: Пн - Пт 8:00 - 18:00</p>
-                </div>
-                <nav>
-                    <a href="#" class="header__contacts-link">Facebook</a>
-                    <a href="#" class="header__contacts-link">Instagram</a>
-                    <a href="#" class="header__contacts-link">Telegram</a>
-                    <a href="#" class="header__contacts-link">VK</a>
-                </nav>
-            </div>
-        </div>
-        <div class="header__nav-container g-page-container">
-            <a href="../index.html"><img src="../media/logo.svg" alt="Логотип сайта"></a>
-            <nav class="header__nav-list">
-                <a href="#" class="header__nav-link">УСЛУГИ</a>
-                <a href="#" class="header__nav-link">БЛОГ</a>
-                <a href="#" class="header__nav-link">О НАС</a>
-                <a href="contacts.html" class="header__nav-link">КОНТАКТЫ</a>
-                <a href="hiring-employees.html" class="header__nav-link">СОТРУДНИКАМ</a>
-            </nav>
-            <form action="#" method="get" class="header__search-form">
-                <button type="submit" class="header__search-submit-button">
-                    <img src="../media/search-icon.svg" alt="Иконка лупы">
-                </button>
-                <input type="text" name="q" value="Дизайн для текста" class="header__search-input">
-            </form>
-            <a href="#job-form" class="header__feedback-form-button">ОТКЛИКНУТЬСЯ</a>
-        </div>
-    </header>
-    <main>
-        <section class="g-page-container">
-            <h2 class="main__slider-header">Забавные моменты</h2>
-            <div class="main__slider">
-                <div class="main__slides">
-                    <img src="../media/slide-1.svg" alt="Slide #1" class="main__slide">
-                    <img src="../media/slide-2.svg" alt="Slide #2" class="main__slide">
-                    <img src="../media/slide-3.jpg" alt="Slide #3" class="main__slide">
-                </div>
-                <div class="main__slider-buttons">
-                    <a href="" class="main__slider-button"><img src="../media/bug-icon.svg" alt="Иконка жука"></a>
-                    <a href="" class="main__slider-button"><img src="../media/bug-icon.svg" alt="Иконка жука"></a>
-                    <a href="" class="main__slider-button"><img src="../media/bug-icon.svg" alt="Иконка жука"></a>
-                </div>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <div class="footer__container g-page-container">
-            <a href="tel:89997776688" class="footer__tel-link">Если у вас остались вопросы, звоните на: +7-(999)-777-66-88</a>
-            <nav class="footer__socials-nav">
-                <a href="#"><img src="../media/vk-icon.png" alt="Иконка соцсети"></a>
-                <a href="#"><img src="../media/telegram-icon.png" alt="Иконка соцсети"></a>
-                <a href="#"><img src="../media/instagram-icon.png" alt="Иконка соцсети"></a>
-                <a href="#"><img src="..//media/facebook-icon.png" alt="Иконка соцсети"></a>
-            </nav>
-        </div>
-    </footer>
-    <script src="../scripts/contacts_slider_script.js"></script>
+	<header>
+		<div class="header__contacts-container-background">
+			<div class="header__contacts-container g-page-container">
+				<div class="header__working-hours">
+					<img src="../media/watch-icon.svg" alt="Иконка часов" class="header__watch-icon">
+					<p class="header__working-hours-text">Мы работаем: Пн - Пт 8:00 - 18:00</p>
+				</div>
+				<nav>
+					<a href="#" class="header__contacts-link">Facebook</a>
+					<a href="#" class="header__contacts-link">Instagram</a>
+					<a href="#" class="header__contacts-link">Telegram</a>
+					<a href="#" class="header__contacts-link">VK</a>
+				</nav>
+			</div>
+		</div>
+		<div class="header__nav-container g-page-container">
+			<a href="../index.html"><img src="../media/logo.svg" alt="Логотип сайта"></a>
+			<nav class="header__nav-list">
+				<a href="#" class="header__nav-link">УСЛУГИ</a>
+				<a href="#" class="header__nav-link">БЛОГ</a>
+				<a href="#" class="header__nav-link">О НАС</a>
+				<a href="contacts.html" class="header__nav-link">КОНТАКТЫ</a>
+				<a href="hiring-employees.html" class="header__nav-link">СОТРУДНИКАМ</a>
+			</nav>
+			<form action="#" method="get" class="header__search-form">
+				<button type="submit" class="header__search-submit-button">
+					<img src="../media/search-icon.svg" alt="Иконка лупы">
+				</button>
+				<input type="text" name="q" value="Дизайн для текста" class="header__search-input">
+			</form>
+			<a href="#job-form" class="header__feedback-form-button">ОТКЛИКНУТЬСЯ</a>
+		</div>
+	</header>
+	<main>
+		<section class="g-page-container">
+			<h2 class="main__slider-header">Забавные моменты</h2>
+			<div class="main__slider">
+				<div class="main__slides">
+					<img src="../media/slide-1.svg" alt="Slide #1" class="main__slide">
+					<img src="../media/slide-2.svg" alt="Slide #2" class="main__slide">
+					<img src="../media/slide-3.jpg" alt="Slide #3" class="main__slide">
+				</div>
+				<div class="main__slider-buttons">
+					<a href="" class="main__slider-button"><img src="../media/bug-icon.svg" alt="Иконка жука"></a>
+					<a href="" class="main__slider-button"><img src="../media/bug-icon.svg" alt="Иконка жука"></a>
+					<a href="" class="main__slider-button"><img src="../media/bug-icon.svg" alt="Иконка жука"></a>
+				</div>
+			</div>
+		</section>
+		<form action="#" method="post" class="g-page-container main__feedback-form">
+			<div class="main__form-header-wrapper">
+				<h2 class="main__form-header-text">Ваши смешные ошибки</h2>
+			</div>
+			<div class="main__form-inputs-wrapper">
+				<input type="text" name="fullname" placeholder="ФИО" required>
+				<div class="main__input-group">
+					<input type="email" name="email" placeholder="Email" required>
+					<label for="file" class="main__custom-file-wrapper">
+						<input type="file" name="image" id="file" hidden required>
+						<img src="../media/file-icon.svg" alt="Иконка файла" class="main__custom-file-icon">
+						<p class="main__custom-file-text">Фото</p>
+					</label>
+				</div>
+				<textarea name="description" cols="30" rows="10" placeholder="Описание ошибки" required></textarea>
+				<div class="main__form-buttons-wrapper">
+					<button type="submit">Отправить</button>
+					<button type="reset">Сбросить</button>
+				</div>
+			</div>
+		</form>
+	</main>
+	<footer>
+		<div class="footer__container g-page-container">
+			<a href="tel:89997776688" class="footer__tel-link">Если у вас остались вопросы, звоните на:
+				+7-(999)-777-66-88</a>
+			<nav class="footer__socials-nav">
+				<a href="#"><img src="../media/vk-icon.png" alt="Иконка соцсети"></a>
+				<a href="#"><img src="../media/telegram-icon.png" alt="Иконка соцсети"></a>
+				<a href="#"><img src="../media/instagram-icon.png" alt="Иконка соцсети"></a>
+				<a href="#"><img src="..//media/facebook-icon.png" alt="Иконка соцсети"></a>
+			</nav>
+		</div>
+	</footer>
+	<script src="../scripts/contacts_slider_script.js"></script>
 </body>
+
 </html>
