Add new page and edit links

--- a/pages/services.html
+++ b/pages/services.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="stylesheet" href="../fonts.css" />
 	<link rel="stylesheet" href="../style.css" />
-	<link rel="stylesheet" href="../styles/contacts.css">
 
 	<link rel="shortcut icon" href="../media/min-logo.svg" />
 
-	<title>LifeOops - контакты</title>
+    <title>LifeOops - услуги</title>
 </head>
-
 <body>
 	<header>
 		<div class="header__contacts-container-background">
@@ -48,44 +45,9 @@
 			<a href="#job-form" class="header__feedback-form-button">ОТКЛИКНУТЬСЯ</a>
 		</div>
 	</header>
-	<main>
-		<section class="g-page-container">
-			<h2 class="main__slider-header">Забавные моменты</h2>
-			<div class="main__slider">
-				<div class="main__slides">
-					<img src="../media/slide-1.svg" alt="Slide #1" class="main__slide">
-					<img src="../media/slide-2.svg" alt="Slide #2" class="main__slide">
-					<img src="../media/slide-3.jpg" alt="Slide #3" class="main__slide">
-				</div>
-				<div class="main__slider-buttons">
-					<a href="" class="main__slider-button"><img src="../media/bug-icon.svg" alt="Иконка жука"></a>
-					<a href="" class="main__slider-button"><img src="../media/bug-icon.svg" alt="Иконка жука"></a>
-					<a href="" class="main__slider-button"><img src="../media/bug-icon.svg" alt="Иконка жука"></a>
-				</div>
-			</div>
-		</section>
-		<form action="#" method="post" class="g-page-container main__feedback-form">
-			<div class="main__form-header-wrapper">
-				<h2 class="main__form-header-text">Ваши смешные ошибки</h2>
-			</div>
-			<div class="main__form-inputs-wrapper">
-				<input type="text" name="fullname" placeholder="ФИО" required>
-				<div class="main__input-group">
-					<input type="email" name="email" placeholder="Email" required>
-					<label for="file" class="main__custom-file-wrapper">
-						<input type="file" name="image" id="file" hidden required>
-						<img src="../media/file-icon.svg" alt="Иконка файла" class="main__custom-file-icon">
-						<p class="main__custom-file-text">Фото</p>
-					</label>
-				</div>
-				<textarea name="description" cols="30" rows="10" placeholder="Описание ошибки" required></textarea>
-				<div class="main__form-buttons-wrapper">
-					<button type="submit">Отправить</button>
-					<button type="reset">Сбросить</button>
-				</div>
-			</div>
-		</form>
-	</main>
+    <main>
+
+    </main>
 	<footer>
 		<div class="footer__container g-page-container">
 			<a href="tel:89997776688" class="footer__tel-link">Если у вас остались вопросы, звоните на:
@@ -98,7 +60,5 @@
 			</nav>
 		</div>
 	</footer>
-	<script src="../scripts/contacts_slider_script.js"></script>
 </body>
-
 </html>
