--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="header__nav-container g-page-container">
 			<a href="index.html"><img src="media/logo.svg" alt="Логотип сайта"></a>
 			<nav class="header__nav-list">
-				<a href="#" class="header__nav-link">УСЛУГИ</a>
+				<a href="pages/services.html" class="header__nav-link">УСЛУГИ</a>
 				<a href="#" class="header__nav-link">БЛОГ</a>
 				<a href="#" class="header__nav-link">О НАС</a>
 				<a href="pages/contacts.html" class="header__nav-link">КОНТАКТЫ</a>
