--- a/pages/hiring-employees.html
+++ b/pages/hiring-employees.html
@@ -31,7 +31,7 @@
             <div class="header__nav-container g-page-container">
                 <a href="../index.html"><img src="../media/logo.svg" alt="Логотип сайта"></a>
                 <nav class="header__nav-list">
-                    <a href="#" class="header__nav-link">УСЛУГИ</a>
+                    <a href="services.html" class="header__nav-link">УСЛУГИ</a>
                     <a href="#" class="header__nav-link">БЛОГ</a>
                     <a href="#" class="header__nav-link">О НАС</a>
                     <a href="contacts.html" class="header__nav-link">КОНТАКТЫ</a>
