Add services section

--- a/pages/services.html
+++ b/pages/services.html
@@ -6,6 +6,7 @@
 
 	<link rel="stylesheet" href="../fonts.css" />
 	<link rel="stylesheet" href="../style.css" />
+	<link rel="stylesheet" href="../styles/services.css">
 
 	<link rel="shortcut icon" href="../media/min-logo.svg" />
 
@@ -46,7 +47,39 @@
 		</div>
 	</header>
     <main>
-
+		<section class="g-page-container">
+			<h1 class="main__services-section-header">Предоставляемые услуги</h1>
+			<div class="main__services-wrapper">
+				<div class="main__services-list-wrapper">
+					<p class="main__services-list-legend">Оказываемые<br>услуги</p>
+					<ul class="main__services-list">
+						<li class="main__services-element">Помощь в веб дизайне и в графическом дизайне</li>
+						<li class="main__services-element">Помощь в разработке сайтов и сервисов</li>
+						<li class="main__services-element">Помощь в разработке приложений</li>
+						<li class="main__services-element">Помощь в визуальной планировке сайтов и т.д.</li>
+						<li class="main__services-element">Проверка правописания текстов</li>
+					</ul>
+				</div>
+				<div class="main__services-list-wrapper">
+					<p class="main__services-list-legend">Расценка<br>услуг</p>
+					<ul class="main__services-list">
+						<li class="main__services-element">1000 р. За услугу</li>
+						<li class="main__services-element">2500 р. За услугу</li>
+						<li class="main__services-element">1500 р. За услугу</li>
+						<li class="main__services-element">2000 р. За услугу</li>
+						<li class="main__services-element">500 р. За услугу</li>
+					</ul>
+					<p class="main__services-list-legend"><br><br></p>
+					<ul class="main__services-list">
+						<li class="main__services-element">500 р. За правку</li>
+						<li class="main__services-element">1500 р. За правку</li>
+						<li class="main__services-element">950 р. За правку</li>
+						<li class="main__services-element">1000 р. За правку</li>
+						<li class="main__services-element">250 р. За правку</li>
+					</ul>
+				</div>
+			</div>
+		</section>
     </main>
 	<footer>
 		<div class="footer__container g-page-container">
