Finish services page

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -39,13 +39,13 @@
 				<a href="contacts.html" class="header__nav-link">КОНТАКТЫ</a>
 				<a href="hiring-employees.html" class="header__nav-link">СОТРУДНИКАМ</a>
 			</nav>
-			<form action="#" method="get" class="header__search-form">
+			<form action="#" method="get" class="header__search-form" id="feedback-form">
 				<button type="submit" class="header__search-submit-button">
 					<img src="../media/search-icon.svg" alt="Иконка лупы">
 				</button>
 				<input type="text" name="q" value="Дизайн для текста" class="header__search-input">
 			</form>
-			<a href="#job-form" class="header__feedback-form-button">ОТКЛИКНУТЬСЯ</a>
+			<a href="#feedback-form" class="header__feedback-form-button">ОТКЛИКНУТЬСЯ</a>
 		</div>
 	</header>
 	<main>
