--- a/pages/services.html
+++ b/pages/services.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="stylesheet" href="../fonts.css" />
 	<link rel="stylesheet" href="../style.css" />
@@ -10,8 +11,9 @@
 
 	<link rel="shortcut icon" href="../media/min-logo.svg" />
 
-    <title>LifeOops - услуги</title>
+	<title>LifeOops - услуги</title>
 </head>
+
 <body>
 	<header>
 		<div class="header__contacts-container-background">
@@ -46,7 +48,7 @@
 			<a href="#job-form" class="header__feedback-form-button">ОТКЛИКНУТЬСЯ</a>
 		</div>
 	</header>
-    <main>
+	<main>
 		<section class="g-page-container">
 			<h1 class="main__services-section-header">Предоставляемые услуги</h1>
 			<div class="main__services-wrapper">
@@ -80,7 +82,111 @@
 				</div>
 			</div>
 		</section>
-    </main>
+		<section class="main__info-section g-page-container">
+			<div class="main__info-buttons-group">
+				<a href="" class="main__info-button">Основные ошибки</a>
+				<a href="" class="main__info-button">Причины ошибок</a>
+				<a href="" class="main__info-button">Возможные решения</a>
+			</div>
+			<div class="main__info-blocks-wrapper">
+				<div class="main__info-block">
+					<ul class="main__info-list">
+						<li class="main__info-list-element">
+							<img src="../media/pointer-icon.svg" alt="Иконка указателя" class="main__info-element-icon">
+							<p class="main__info-element-header">В коде</p>
+							<p class="main__info-element-text">
+								Не стесняйтесь использовать
+								скобки Почему-то так повелось,
+								что использование лишних скобок при
+								программировании на Си/Си++ считается
+								неким постыдным действием. Возможно, это
+								идёт от того, что вопрос про приоритет операций
+								очень любят задавать на собеседовании. И у человека
+								подсознательно откладывается стремление всегда максимально
+								использовать механизм приоритетов. Ведь если он поставит лишние
+								скобки, то вдруг кто-то подумает что он новичок, а не истинный джедай./
+							</p>
+						</li>
+						<li class="main__info-list-element">
+							<img src="../media/pointer-icon.svg" alt="Иконка указателя" class="main__info-element-icon">
+							<p class="main__info-element-header">В тексте</p>
+							<p class="main__info-element-text">
+								Ищите подсказки в интернете. Выбирайте авторитетные ресурсы: <br>
+								словари или сайты, где советы дают настоящие Денжер про.
+							</p>
+						</li>
+						<li class="main__info-list-element">
+							<img src="../media/pointer-icon.svg" alt="Иконка указателя" class="main__info-element-icon">
+							<p class="main__info-element-header">Вообще</p>
+							<p class="main__info-element-text">
+								Твоя главная ошибка в том бро, что ты всё еще не задал вопрос нам)
+							</p>
+						</li>
+						<img src="../media/info-block-1-bg.svg" alt="Картинка инфоблока" class="main__info-block-bg">
+					</ul>
+				</div>
+				<div class="main__info-block">
+					<ul class="main__info-list">
+						<li class="main__info-list-element">
+							<img src="../media/pointer-icon.svg" alt="Иконка указателя" class="main__info-element-icon">
+							<p class="main__info-element-header">В коде</p>
+							<p class="main__info-element-text">
+								 Они в основном вызваны нарушением
+								ожидаемой формы или структуры языка,
+								на котором пишется программа.
+							</p>
+						</li>
+						<li class="main__info-list-element">
+							<img src="../media/pointer-icon.svg" alt="Иконка указателя" class="main__info-element-icon">
+							<p class="main__info-element-header">В тексте</p>
+							<p class="main__info-element-text">
+								Неумение пользоваться словарём и справочниками
+								для разрешения трудных случаев написания, <br>
+								произношения, словообразования.
+							</p>
+						</li>
+						<li class="main__info-list-element">
+							<img src="../media/pointer-icon.svg" alt="Иконка указателя" class="main__info-element-icon">
+							<p class="main__info-element-header">Вообще</p>
+							<p class="main__info-element-text">
+								Твоя главная ошибка в том бро, что ты всё еще не задал вопрос нам)
+							</p>
+						</li>
+					</ul>
+				</div>
+				<div class="main__info-block">
+					<ul class="main__info-list">
+						<li class="main__info-list-element">
+							<img src="../media/pointer-icon.svg" alt="Иконка указателя" class="main__info-element-icon">
+							<p class="main__info-element-header">В коде</p>
+							<p class="main__info-element-text">
+								Улучшайте свои знания. Разработчику
+								нужно постоянно развиваться и расширять
+								знания о тонкостях работы с целевым языком.
+							</p>
+						</li>
+						<li class="main__info-list-element">
+							<img src="../media/pointer-icon.svg" alt="Иконка указателя" class="main__info-element-icon">
+							<p class="main__info-element-header">В тексте</p>
+							<p class="main__info-element-text">
+								Разделяйте текст на абзацы, не жалейте места.
+								Каждый маленький абзац будет вовлекать читателя
+								и вероятность того, что ваш текст прочтут, будет намного выше!
+							</p>
+						</li>
+						<li class="main__info-list-element">
+							<img src="../media/pointer-icon.svg" alt="Иконка указателя" class="main__info-element-icon">
+							<p class="main__info-element-header">Вообще</p>
+							<p class="main__info-element-text">
+								Твоя главная ошибка в том бро, что ты всё еще не задал вопрос нам)
+							</p>
+						</li>
+						<img src="../media/info-block-2-bg.png" alt="Картинка инфоблока" class="main__info-block-bg">
+					</ul>
+				</div>
+			</div>
+		</section>
+	</main>
 	<footer>
 		<div class="footer__container g-page-container">
 			<a href="tel:89997776688" class="footer__tel-link">Если у вас остались вопросы, звоните на:
@@ -93,5 +199,7 @@
 			</nav>
 		</div>
 	</footer>
+	<script src="../scripts/services_infoblocks_script.js"></script>
 </body>
+
 </html>
