--- a/pages/services.html
+++ b/pages/services.html
@@ -45,7 +45,7 @@
 				</button>
 				<input type="text" name="q" value="Дизайн для текста" class="header__search-input">
 			</form>
-			<a href="#job-form" class="header__feedback-form-button">ОТКЛИКНУТЬСЯ</a>
+			<a href="../index.html#feedback-form" class="header__feedback-form-button">К ВОПРОСАМ</a>
 		</div>
 	</header>
 	<main>
