--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -45,7 +45,7 @@
 				</button>
 				<input type="text" name="q" value="Дизайн для текста" class="header__search-input">
 			</form>
-			<a href="#feedback-form" class="header__feedback-form-button">ОТКЛИКНУТЬСЯ</a>
+			<a href="#feedback-form" class="header__feedback-form-button">ВАШИ ОШИБКИ</a>
 		</div>
 	</header>
 	<main>
