Fix header search input

--- a/pages/services.html
+++ b/pages/services.html
@@ -43,7 +43,7 @@
 				<button type="submit" class="header__search-submit-button">
 					<img src="../media/search-icon.svg" alt="Иконка лупы">
 				</button>
-				<input type="text" name="q" value="Дизайн для текста" class="header__search-input">
+				<input type="text" name="find" placeholder="Дизайн для текста" class="header__search-input">
 			</form>
 			<a href="../index.html#feedback-form" class="header__feedback-form-button">К ВОПРОСАМ</a>
 		</div>
