--- a/pages/hiring-employees.html
+++ b/pages/hiring-employees.html
@@ -41,7 +41,7 @@
                     <button type="submit" class="header__search-submit-button">
                         <img src="../media/search-icon.svg" alt="Иконка лупы">
                     </button>
-                    <input type="text" name="q" value="Дизайн для текста" class="header__search-input">
+                    <input type="text" name="find" placeholder="Дизайн для текста" class="header__search-input">
                 </form>
                 <a href="#job-form" class="header__feedback-form-button">ОТКЛИКНУТЬСЯ</a>
             </div>
