--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<nav class="header__nav-list">
 				<a href="pages/services.html" class="header__nav-link">УСЛУГИ</a>
 				<a href="#" class="header__nav-link">БЛОГ</a>
-				<a href="#" class="header__nav-link">О НАС</a>
+				<a href="pages/about-page.html" class="header__nav-link">О НАС</a>
 				<a href="pages/contacts.html" class="header__nav-link">КОНТАКТЫ</a>
 				<a href="pages/hiring-employees.html" class="header__nav-link">СОТРУДНИКАМ</a>
 			</nav>
