--- a/pages/hiring-employees.html
+++ b/pages/hiring-employees.html
@@ -33,7 +33,7 @@
                 <nav class="header__nav-list">
                     <a href="services.html" class="header__nav-link">УСЛУГИ</a>
                     <a href="#" class="header__nav-link">БЛОГ</a>
-                    <a href="#" class="header__nav-link">О НАС</a>
+                    <a href="about-page.html" class="header__nav-link">О НАС</a>
                     <a href="contacts.html" class="header__nav-link">КОНТАКТЫ</a>
                     <a href="hiring-employees.html" class="header__nav-link">СОТРУДНИКАМ</a>
                 </nav>
